@@ -1,5 +1,13 @@
 2009-03-10  Andrea Cimitan  <andrea.cimitan@gmail.com
 
+	* engines/clearlooks/src/clearlooks_draw.c
+	(clearlooks_draw_entry_progress):
+	* engines/clearlooks/src/clearlooks_style.c
+	(clearlooks_style_draw_box):
+	Coding style.
+
+2009-03-10  Andrea Cimitan  <andrea.cimitan@gmail.com
+
 	* engines/clearlooks/src/clearlooks_draw.c (clearlooks_draw_entry):
 	* engines/clearlooks/src/clearlooks_draw_gummy.c
 	(clearlooks_gummy_draw_entry):
